--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ pyttsx3
 numpy
 sounddevice
 scipy
-git+https://github.com/OperavonderVollmer/OperaPowerRelay.git@1.1.5
+git+https://github.com/OperavonderVollmer/OperaPowerRelay.git@v1.1.5
