--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 pyttsx3
 sounddevice
 scipy
-git+https://github.com/OperavonderVollmer/OperaPowerRelay.git@v1.1.5
+git+https://github.com/OperavonderVollmer/OperaPowerRelay.git
